# AircraftDesign

./: MACE1.avl  MANIFEST.in  acdesign.airfoils.uiuc_list.txt  experiment.py  pyproject.toml  readme.md  requirements.txt  setup.cfg  setup.py  temp.py
acdesign/: __init__.py  atmosphere.py
avl/: cases.run  geom.avl  strip_forces_0.out  strip_forces_1.out  strip_forces_10.out  strip_forces_100.out  strip_forces_101.out  strip_forces_102.out  strip_forces_103.out  strip_forces_104.out  strip_forces_105.out  strip_forces_106.out  strip_forces_107.out  strip_forces_108.out  strip_forces_109.out  strip_forces_11.out  strip_forces_110.out  strip_forces_111.out  strip_forces_112.out  strip_forces_113.out  strip_forces_114.out  strip_forces_115.out  strip_forces_116.out  strip_forces_117.out  strip_forces_118.out  strip_forces_119.out  strip_forces_12.out  strip_forces_120.out  strip_forces_121.out  strip_forces_122.out  strip_forces_123.out  strip_forces_124.out  strip_forces_125.out  strip_forces_126.out  strip_forces_127.out  strip_forces_128.out  strip_forces_129.out  strip_forces_13.out  strip_forces_130.out  strip_forces_131.out  (+708 more)
examples/: buddi.avl  buddi.py  buddi_performance.py  cold_draft.py  download_dat_files.py  massprops.csv  performance_check.py  solar_plane.ipynb  solar_plane.py  solar_plane_avl.py  sum_masses.py  uiuc.ipynb  uiuc_smoothing.ipynb  wing_aero.ipynb  wing_aero_calcs.ipynb  wing_performance.py
tests/: aircraft.json  test_airfoil.py  test_atmosphere.py  test_create_plane.py  test_geom_to_freecad.py  test_panel.py  test_parse_avl.py  (+1 more)
(+380 files in other folders)
