[metadata]
name=acdesign
author=Thomas David
author_email=thomasdavid0@gmail.com
description=Tools for designing aircraft
long_description=file: readme.md
long_description_content_type = text/markdown
version=0.0.1
url=https://github.com/ThomasDavid0/AircraftDesign

[options]
include_package_data=True
install_requires = 
    numpy
    pandas
    scipy
    pfc-geometry